fixed MSVC build

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,10 +32,10 @@ SET(GuiSources
 )
 
 IF(MSVC)
-    ADD_DEFINITIONS(-DBRLCAD_MOOSE_EXPORT=__declspec(dllimport))
+    ADD_DEFINITIONS("-DBRLCAD_MOOSE_EXPORT=__declspec(dllimport)")
 ELSE(MSVC)
-    ADD_DEFINITIONS(-DBRLCAD_MOOSE_EXPORT=)
+    ADD_DEFINITIONS("-DBRLCAD_MOOSE_EXPORT=")
 ENDIF(MSVC)
 
-ADD_EXECUTABLE(GUI ${GuiSources})
+ADD_EXECUTABLE(GUI WIN32 ${GuiSources})
 TARGET_LINK_LIBRARIES(GUI ${BRLCAD_MOOSE_LIBRARY} Qt5::Widgets OpenGL::GL)
